# MultiProxy

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
crates/agent/: BUILD.md  Cargo.toml
crates/agent/src/: capacity.rs  config.rs  conn.rs  failover.rs  lib.rs  main.rs  platform.rs  report.rs  selfheal.rs  supervisor.rs  testutil.rs  updater.rs
crates/agent/tests/: mock_panel.rs  probe_starvation.rs  reconnect.rs
crates/contract/: Cargo.toml
crates/contract/src/: isp.rs  lib.rs  model.rs  protocol.rs  snapshot.rs  version.rs
crates/geoip/: Cargo.toml
crates/geoip/src/: division.rs  geocn.rs  lib.rs
crates/panel/: Cargo.toml
crates/panel/frontend/: index.html
crates/panel/src/: acme.rs  api.rs  auth.rs  certs.rs  cloudflare.rs  configgen.rs  crypto.rs  db.rs  ddns.rs  error.rs  lib.rs  main.rs  scheduler.rs  state.rs  totp.rs  ui.rs  updater.rs  ws_server.rs
crates/panel/src/dns/: answer.rs  diag.rs  ecs.rs  handler.rs  mod.rs  runtime.rs
crates/panel/tests/: auth_crud.rs  capacity.rs  dns_ecs.rs  ws_mock_agent.rs
crates/panel/tests/golden/: node-gost-tls.json  node-gost.json  node-realm-tls.toml  node-realm.toml
crates/relaycfg/: Cargo.toml
crates/relaycfg/src/: lib.rs
deploy/: Dockerfile.agent  Dockerfile.panel  agent-install.md  dns-setup.md  docker-compose.yml  release-checklist.md  smoke.sh
scripts/: install-agent.sh  install-panel.sh
