[workspace]
resolver = "2"
members = [
    "crates/contract",
    "crates/geoip",
    "crates/relaycfg",
    "crates/panel",
    "crates/agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
# Shared, light deps. The `contract` crate intentionally pulls only serde so the
# agent stays musl-thin (it must NOT transitively pull hickory/axum/sqlx).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
contract = { path = "crates/contract" }
geoip = { path = "crates/geoip" }
relaycfg = { path = "crates/relaycfg" }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
