[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thin static agent on each NAT node: reverse-connect, apply config, supervise gost/realm, self-report + capacity telemetry. Dual-arch musl (Line B)."

[[bin]]
name = "agent"
path = "src/main.rs"

[lib]
name = "agent"
path = "src/lib.rs"

[features]
# Injectable dummy spawner + fixed backend probe for tests / panel-side e2e.
# Off by default so the production binary never ships test scaffolding.
testutil = []

[dependencies]
contract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# M1 (Line B) wss reverse-connect stack. Kept musl-thin and aarch64-ready:
# pure-Rust async + rustls on the `ring` crypto provider (explicitly NOT
# aws-lc-rs, whose cmake/NASM toolchain is painful on aarch64-musl). No
# axum/hickory/sqlx — those belong to the panel line.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "io-util",
    "sync",
    "process",
    "signal",
    "fs",
] }
# default-features=false drops the default native-tls path; we wire rustls+ring
# + webpki roots explicitly. `connect`/`handshake` give the client side.
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "connect",
    "handshake",
    "rustls-tls-webpki-roots",
] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
clap = { version = "4", features = ["derive", "env"] }
rustls-pki-types = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Linux PR_SET_PDEATHSIG: tie the supervised gost/realm child's lifetime to the
# agent so it can never linger as an orphan (binding its port) across restarts.
libc = "0.2"

[dev-dependencies]
# In-test mock panel: a plain-ws server (no TLS) so the conn loop, config-apply,
# supervisor, and capacity reporting can be exercised without a real TLS panel
# or a real gost/realm binary. Plain ws is acceptable for M1 tests per the brief.
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "connect",
    "handshake",
] }
# Re-depend on ourselves with `testutil` so integration tests get the injectable
# dummy spawner / fixed backend probe (the unit tests use the cfg(test) path).
agent = { path = ".", features = ["testutil"] }
