[package]
name = "contract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared agent↔panel wire protocol, data model, versioning, and the AvailabilitySnapshot coupling type (Line 0)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
